# register

./: CMakeLists.txt  README.md
cmake/: StandardSettings.cmake  Tools.cmake
include/register/: bit_proxy.hpp  register.hpp  register_impl.hpp  register_traits.hpp
include/register/common/: assert.hpp  type_traits.hpp  types.hpp
src/: register.cpp
tests/: CMakeLists.txt  test_bit_op.cpp  test_index_op.cpp
